jasper/force-app/main/default/objects/Order/fields/LineItems_Merchandise_Disccount__c.field-meta.xml
<CustomField>
    <fullName>LineItems_Merchandise_Disccount__c</fullName>
    <label>Total Pre GST Discount not needed</label>
    <summarizedField>OrderItem.Merchandise_Disccount_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>