jasper/force-app/main/default/objects/Order/fields/Manufacture_Unit__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacture Unit</label>
    <type>Checkbox</type>
</CustomField>