jasper/force-app/main/default/objects/Order/fields/Merchandise_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Additional_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Merchandise Additional Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>