jasper/force-app/main/default/objects/Order/fields/MFG_date__c.field-meta.xml
<CustomField>
    <fullName>MFG_date__c</fullName>
    <formula>Assigned_Vehicle__r.ManufacturedDate</formula>
    <label>MFG date</label>
    <type>Date</type>
</CustomField>