jasper/force-app/main/default/objects/Order/fields/Motor_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Number__c</fullName>
    <formula>Assigned_Vehicle__r.EngineNumber</formula>
    <label>Motor Number</label>
    <type>Text</type>
</CustomField>