jasper/force-app/main/default/objects/Order/fields/Notify_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify By Email</label>
    <type>Checkbox</type>
</CustomField>