jasper/force-app/main/default/objects/Order/fields/Notify_By_SMS__c.field-meta.xml
<CustomField>
    <fullName>Notify_By_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify By SMS</label>
    <type>Checkbox</type>
</CustomField>