jasper/force-app/main/default/objects/Order/fields/Offer_description__c.field-meta.xml
<CustomField>
    <fullName>Offer_description__c</fullName>
    <label>Offer Description</label>
    <type>TextArea</type>
</CustomField>