jasper/force-app/main/default/objects/Order/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offers__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>