jasper/force-app/main/default/objects/Order/fields/Order_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Order_Ageing__c</fullName>
    <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>