jasper/force-app/main/default/objects/Order/fields/Order_Available__c.field-meta.xml
<CustomField>
    <fullName>Order_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Available</label>
    <type>Checkbox</type>
</CustomField>