jasper/force-app/main/default/objects/Order/fields/Order_Cancelletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Cancelletion_Date__c</fullName>
    <label>Order Cancelletion Date</label>
    <type>DateTime</type>
</CustomField>