jasper/force-app/main/default/objects/Order/fields/Order_prod_count__c.field-meta.xml
<CustomField>
    <fullName>Order_prod_count__c</fullName>
    <label>Order prod count</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>