jasper/force-app/main/default/objects/Order/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOKING_CONFIRMED</fullName>
                <label>Booking Confirmed</label>
            </value>
            <value>
                <fullName>ORDER_CONFIRMED</fullName>
                <label>Order Confirmed</label>
            </value>
            <value>
                <fullName>ALLOTMENT_IN_PROCESS</fullName>
                <label>Allotment In Process</label>
            </value>
            <value>
                <fullName>VEHICLE_ALLOTED</fullName>
                <label>Vehicle Alloted</label>
            </value>
            <value>
                <fullName>REGISTRATION_IN_PROCESS</fullName>
                <label>Registration in Process</label>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>REFUND_REQUESTED</fullName>
                <label>Refund Requested</label>
            </value>
            <value>
                <fullName>FULLY_REFUNDED</fullName>
                <label>Fully Refunded</label>
            </value>
            <value>
                <fullName>DOWNPAYMENT_RECEIVED</fullName>
                <isActive>false</isActive>
                <label>DOWNPAYMENT_RECEIVED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>