jasper/force-app/main/default/objects/Order/fields/Order_Time_del__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_del__c</fullName>
    <formula>TIMEVALUE(CreatedDate + (5.5 / 24))</formula>
    <label>Order Time</label>
    <type>Time</type>
</CustomField>