jasper/force-app/main/default/objects/Order/fields/OTC_Additional_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>OTC_Additional_Discount_Amount__c</fullName>
    <label>OTC Additional Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>