jasper/force-app/main/default/objects/Order/fields/OTC_Total_Product_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>OTC_Total_Product_Discount_Amount__c</fullName>
    <label>OTC Total Product Discount (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>