jasper/force-app/main/default/objects/Order/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash Payment</fullName>
            </value>
            <value>
                <fullName>Bank Loan/Auto Loan</fullName>
            </value>
            <value>
                <fullName>Dealer Financing</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>