jasper/force-app/main/default/objects/Order/fields/Payment_Receipt_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_PDF_URL__c</fullName>
    <label>Payment Receipt PDF URL</label>
    <type>Url</type>
</CustomField>