jasper/force-app/main/default/objects/Order/fields/PO_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>PO_Grand_Total__c</fullName>
    <label>Order Grand Total</label>
    <summarizedField>OrderItem.Grand_Total__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>