jasper/force-app/main/default/objects/Order/fields/PO_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>PO_Sub_Total__c</fullName>
    <label>Taxable Amount</label>
    <summarizedField>OrderItem.PO_Sub_Total__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>