jasper/force-app/main/default/objects/Order/fields/PO_Tax__c.field-meta.xml
<CustomField>
    <fullName>PO_Tax__c</fullName>
    <label>Total Tax</label>
    <summarizedField>OrderItem.PO_Tax__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>