jasper/force-app/main/default/objects/Order/fields/Reason_for_Battery_Email__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Battery_Email__c</fullName>
    <label>Reason_for_Battery_Email</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>