jasper/force-app/main/default/objects/Order/fields/REG_Number__c.field-meta.xml
<CustomField>
    <fullName>REG_Number__c</fullName>
    <formula>Assigned_Vehicle__r.VehicleRegistrationNumber</formula>
    <label>REG Number</label>
    <type>Text</type>
</CustomField>