jasper/force-app/main/default/objects/Order/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <formula>IF(Grand_Total__c - Total_Amount_paid__c &gt;=0 , ROUND(Grand_Total__c - Total_Amount_paid__c ,0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>