jasper/force-app/main/default/objects/Order/fields/RSA_Activation_date__c.field-meta.xml
<CustomField>
    <fullName>RSA_Activation_date__c</fullName>
    <formula>IF(  
    ISPICKVAL(Order_Status__c, &quot;RTO Registration&quot;),  
    (LastModifiedDate + 1),  
    NULL  
)</formula>
    <label>RSA Activation date</label>
    <type>DateTime</type>
</CustomField>