jasper/force-app/main/default/objects/Order/fields/RSA_Active__c.field-meta.xml
<CustomField>
    <fullName>RSA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSA Active</label>
    <type>Checkbox</type>
</CustomField>