jasper/force-app/main/default/objects/Order/fields/RSA_Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>RSA_Failure_Date__c</fullName>
    <label>RSA Failure Date</label>
    <type>DateTime</type>
</CustomField>