jasper/force-app/main/default/objects/Order/fields/RSA_Subscription_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>RSA_Subscription_Creation_Status__c</fullName>
    <label>RSA Subscription Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>