jasper/force-app/main/default/objects/Order/fields/RTO_Charges__c.field-meta.xml
<CustomField>
    <fullName>RTO_Charges__c</fullName>
    <label>RTO Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>