jasper/force-app/main/default/objects/Order/fields/RTO_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>RTO_Receipt_Number__c</fullName>
    <label>RTO Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>