jasper/force-app/main/default/objects/Order/fields/Same_state__c.field-meta.xml
<CustomField>
    <fullName>Same_state__c</fullName>
    <formula>Account.BillingState =  Dealer__r.BillingState</formula>
    <label>Same state</label>
    <type>Checkbox</type>
</CustomField>