jasper/force-app/main/default/objects/Order/fields/sap_delivery_no__c.field-meta.xml
<CustomField>
    <fullName>sap_delivery_no__c</fullName>
    <label>sap delivery no</label>
    <length>30</length>
    <type>Text</type>
</CustomField>