jasper/force-app/main/default/objects/Order/fields/SAP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Id__c</fullName>
    <label>SAP Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>