jasper/force-app/main/default/objects/Order/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <formula>Dealer__r.Service_Center__r.Id</formula>
    <label>Service Center</label>
    <type>Text</type>
</CustomField>