jasper/force-app/main/default/objects/Order/fields/SGST_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount_Rollup__c</fullName>
    <label>SGST Amount Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>