jasper/force-app/main/default/objects/Order/fields/State_Govt_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>State_Govt_Subsidy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>State Govt Subsidy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>