jasper/force-app/main/default/objects/Order/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>RTO Registration</fullName>
            </value>
            <value>
                <fullName>Vehicle Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>