jasper/force-app/main/default/objects/Order/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Dealer__r.Store_Name__c</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>