jasper/force-app/main/default/objects/Order/fields/Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Subsidy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidy</label>
    <referenceTo>Subsidy__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>