jasper/force-app/main/default/objects/Order/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <label>Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>