jasper/force-app/main/default/objects/Order/fields/Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Type__c</fullName>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>