jasper/force-app/main/default/objects/Order/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Waiting Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>