jasper/force-app/main/default/objects/Order/fields/Total_accessories_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_accessories_Amount__c</fullName>
    <formula>IF(
    ISBLANK(Total_Accessories_RollUp__c) || Total_Accessories_RollUp__c = 0,
    0,
    Total_Accessories_RollUp__c - 
    IF(ISBLANK(Accessories_Discount_Amount__c), 0, Accessories_Discount_Amount__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Accessories Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>