jasper/force-app/main/default/objects/Order/fields/Total_Accessories_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Accessories_GST__c</fullName>
    <formula>Accessories_CGST_Rollup__c  +  Accessories_SGST_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Accessories GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>