jasper/force-app/main/default/objects/Order/fields/Total_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount1__c</fullName>
    <label>Total Amount</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>notEqual</operation>
        <value>Refund Requested</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>notEqual</operation>
        <value>Fully Refunded</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>