jasper/force-app/main/default/objects/Order/fields/Total_Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Order_Payment__c.Amount1__c</summarizedField>
    <summaryForeignKey>Order_Payment__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>