jasper/force-app/main/default/objects/Order/fields/Total_CGST__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST__c</fullName>
    <label>Total CGST</label>
    <summarizedField>OrderItem.CGST_Amount_rollup__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>