jasper/force-app/main/default/objects/Order/fields/Total_Log_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Log_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Log Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>