jasper/force-app/main/default/objects/Order/fields/Total_Merchandise_CGST__c.field-meta.xml
<CustomField>
    <fullName>Total_Merchandise_CGST__c</fullName>
    <label>Total Merchandise CGST</label>
    <summarizedField>OrderItem.Merchandise_CGST_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>