jasper/force-app/main/default/objects/Order/fields/Total_Merchandise_Disccount__c.field-meta.xml
<CustomField>
    <fullName>Total_Merchandise_Disccount__c</fullName>
    <formula>LineItem_Merchandise_Disccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pre GST Discount Not Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>