jasper/force-app/main/default/objects/Order/fields/Total_Merchandise_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Merchandise_Unit_Price__c</fullName>
    <label>Total Merchandise Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>