jasper/force-app/main/default/objects/Order/fields/Total_Outstanding_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Quantity__c</fullName>
    <label>Total Outstanding Quantity</label>
    <summarizedField>OrderItem.Outstanding_Quantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>