jasper/force-app/main/default/objects/Order/fields/Total_Pre_GST_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pre_GST_Discount__c</fullName>
    <label>Total Pre GST Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>