jasper/force-app/main/default/objects/Order/fields/Total_SGST__c.field-meta.xml
<CustomField>
    <fullName>Total_SGST__c</fullName>
    <label>Total SGST</label>
    <summarizedField>OrderItem.SGST_Amount_Rollup__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>