jasper/force-app/main/default/objects/Order/fields/Total_UTR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_UTR_Amount__c</fullName>
    <label>Total UTR Amount</label>
    <summarizedField>PO_Payments__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>PO_Payments__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>