jasper/force-app/main/default/objects/Order/fields/Total_Vehicle_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_RollUp__c</fullName>
    <label>Total Vehicle RollUp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>