jasper/force-app/main/default/objects/Order/fields/Transportation_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transportation Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>