jasper/force-app/main/default/objects/Order/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <formula>Account.Utm_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Source</label>
    <type>Text</type>
</CustomField>