jasper/force-app/main/default/objects/Order/fields/UTR_Meets_Condition__c.field-meta.xml
<CustomField>
    <fullName>UTR_Meets_Condition__c</fullName>
    <formula>Total_UTR_Amount__c =  Grand_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTR Meets Condition</label>
    <type>Checkbox</type>
</CustomField>