jasper/force-app/main/default/objects/Order/fields/UTR_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>UTR_Ref_No__c</fullName>
    <label>UTR Ref No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>