jasper/force-app/main/default/objects/Order/fields/Vehicle_Colour__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Colour__c</fullName>
    <label>Vehicle Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Monsoon Blue</fullName>
            </value>
            <value>
                <fullName>Spring Yellow</fullName>
            </value>
            <value>
                <fullName>Summer Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>