jasper/force-app/main/default/objects/Order/fields/Vehicle_Email__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Email</label>
    <type>Checkbox</type>
</CustomField>