jasper/force-app/main/default/objects/Order/fields/Vehicle_Gen_Version__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Gen_Version__c</fullName>
    <formula>TEXT(Assigned_Vehicle__r.VehicleDefinition.Gen_version__c)</formula>
    <label>Vehicle Gen Version</label>
    <type>Text</type>
</CustomField>