jasper/force-app/main/default/objects/Order/fields/Vehicle_identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_identification_Number__c</fullName>
    <formula>Assigned_Vehicle__r.VehicleIdentificationNumber</formula>
    <label>Vehicle identification Number</label>
    <type>Text</type>
</CustomField>