jasper/force-app/main/default/objects/Order/fields/Vehicle_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_Date__c</fullName>
    <formula>Assigned_Vehicle__r.Purchased_Date__c</formula>
    <label>Vehicle Purchase Date</label>
    <type>Date</type>
</CustomField>