jasper/force-app/main/default/objects/Order/fields/Vehicle_Tax__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Tax__c</fullName>
    <label>Vehicle Tax</label>
    <summarizedField>OrderItem.Vehicle_tax_amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>