jasper/force-app/main/default/objects/Order/fields/Vehicle_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Total_Discount__c</fullName>
    <formula>Offers_Amount__c +  Discount_on_Ex_Showroom_Price__c +  State_Govt_Subsidy__c +  Subsidy_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>