jasper/force-app/main/default/objects/Order/fields/VOR_5__c.field-meta.xml
<CustomField>
    <fullName>VOR_5__c</fullName>
    <label>VOR (5%)</label>
    <summarizedField>OrderItem.VOR_5__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>